<resources>
    <string name="app_name">Homework2</string>
    <string name="profile_screen">profile</string>
    <string name="main_screen">main</string>
    <string name="settings_screen">settings</string>
    <string name="man_screen">man</string>
    <string name="bluetooth_screen">bluetooth</string>
    <string name="call_screen">call</string>
    <string name="input_text">Print</string>
    <string name="send_btn">Send</string>
</resources>