<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/main_screen" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings_screen" />

    <item
        android:id="@+id/bluetoothFragment"
        android:icon="@drawable/baseline_bluetooth_24"
        android:title="@string/bluetooth_screen" />

    <item
        android:id="@+id/callFragment"
        android:icon="@drawable/baseline_call_24"
        android:title="@string/call_screen" />

    <item
        android:id="@+id/manFragment"
        android:icon="@drawable/baseline_man_24"
        android:title="@string/man_screen" />



</menu>